--- a/src/app/components/table-services/table-services.component.css
+++ b/src/app/components/table-services/table-services.component.css
@@ -1733,19 +1733,15 @@ body {
 }
 
 /**/
+
 @media (max-height: 900px) {
-
-  .modal-register {
-    overflow-y: auto;
-    max-height: 95vh;
-  }
-}
-
-@media (max-height: 900px) and (max-width: 768px) {
-  .modal-register {
-    overflow-y: auto;
-    max-height: 100vh;
-  }
+    .modal-register,
+    .modal-update,
+    .modal-delete,
+    .modal-view {
+        overflow-y: auto;
+        max-height: 95vh;
+    }
 }
 
 /* Mobile médio */
